--- a/mydata/cleandata/calculos.ipynb
+++ b/mydata/cleandata/calculos.ipynb
@@ -14,20 +14,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "961bb59b",
+   "execution_count": 16,
+   "id": "ecde477e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>product</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>arroz</td>\n",
+       "      <td>495.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>ternera</td>\n",
+       "      <td>122.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>arroz</td>\n",
+       "      <td>276.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>cerdo</td>\n",
+       "      <td>53.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>cerdo</td>\n",
+       "      <td>156.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53319</th>\n",
+       "      <td>2021-12-07</td>\n",
+       "      <td>aceite de oliva</td>\n",
+       "      <td>306.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53320</th>\n",
+       "      <td>2021-12-07</td>\n",
+       "      <td>aceite de oliva</td>\n",
+       "      <td>310.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53321</th>\n",
+       "      <td>2021-12-07</td>\n",
+       "      <td>aceite de oliva</td>\n",
+       "      <td>331.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53322</th>\n",
+       "      <td>2021-12-07</td>\n",
+       "      <td>aceite de oliva</td>\n",
+       "      <td>281.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53323</th>\n",
+       "      <td>2021-12-07</td>\n",
+       "      <td>limon</td>\n",
+       "      <td>75.65</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>53324 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             date          product   price\n",
+       "0      2001-01-01            arroz  495.83\n",
+       "1      2001-01-01          ternera  122.90\n",
+       "2      2001-01-01            arroz  276.47\n",
+       "3      2001-01-01            cerdo   53.60\n",
+       "4      2001-01-01            cerdo  156.08\n",
+       "...           ...              ...     ...\n",
+       "53319  2021-12-07  aceite de oliva  306.00\n",
+       "53320  2021-12-07  aceite de oliva  310.50\n",
+       "53321  2021-12-07  aceite de oliva  331.00\n",
+       "53322  2021-12-07  aceite de oliva  281.50\n",
+       "53323  2021-12-07            limon   75.65\n",
+       "\n",
+       "[53324 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ajo = pd.read_csv(\"../per_item/forecasts/ajo.csv\")"
+    "data = pd.read_csv(\"../cleandata/data.csv\")\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7f8b2521",
+   "id": "0727dee8",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2893,7 +3014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "904559d0",
+   "id": "7fc24b7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2901,7 +3022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd0ced3",
+   "id": "284177ad",
    "metadata": {},
    "outputs": [],
    "source": []
