--- a/notebooks/6_scrap_dia.ipynb
+++ b/notebooks/6_scrap_dia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a4642160",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b99ff56a",
    "metadata": {},
    "outputs": [],
@@ -136,9 +136,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "iron",
+   "display_name": "kepler",
    "language": "python",
-   "name": "iron"
+   "name": "kepler"
   },
   "language_info": {
    "codemirror_mode": {
@@ -150,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
